--- a/src/App.css
+++ b/src/App.css
@@ -107,3 +107,16 @@ li {
   border-radius: 16px;
   box-shadow: 0px 0px 8px 0px #3b82f61f;
 }
+
+.crop-top {
+  width: auto;
+  height: 150px;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.crop-top img {
+  width: 100%;
+  height: auto;
+  object-position: top;
+}
